# Aftermath.Currency

./: .gitlab-ci.yml  Dockerfile  pyproject.toml
aftercurrency/: config.py  main.py  schema.py
aftercurrency/parser/: currency.py  parser.py  utils.py
aftercurrency/settings/: base.py
