[tool.poetry]
name = "aftercurrency"
version = "0.1.0"
description = ""
authors = ["Mitch Burneo <mitchburneo@aftermath.team>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.96.1"
aiohttp = "^3.8.4"
pydantic = "^1.10.9"
uvicorn = "^0.22.0"
python-dotenv = "^1.0.1"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
